fix: update fallback API

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+# Set environment for FE: use 'deployment' or 'production'
+VITE_FE_ENV=deployment
+
+# API endpoints
+VITE_API_LOCAL=http://localhost:8303/api
+VITE_API_PUBLIC=http://befakhirul.karyakreasi.id/api
+
+# Backwards compatibility
 VITE_API_URL=http://localhost:8303/api
